<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/social_media_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

  <ImageView
      android:id="@+id/instagram_iv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:contentDescription="@string/instagram"
      android:padding="16dp"
      android:src="@drawable/ic_instagram"
      />

  <ImageView
      android:id="@+id/medium_iv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:contentDescription="@string/medium"
      android:padding="16dp"
      android:src="@drawable/ic_medium"
      />

  <ImageView
      android:id="@+id/facebook_iv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:contentDescription="@string/facebook"
      android:padding="16dp"
      android:src="@drawable/ic_facebook"
      />
  <ImageView
      android:id="@+id/youtube_iv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:contentDescription="@string/youtube"
      android:padding="16dp"
      android:src="@drawable/ic_youtube"
      />

  <ImageView
      android:id="@+id/stackinflow_iv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:contentDescription="@string/share"
      android:padding="16dp"
      android:src="@drawable/ic_share"
      />

</LinearLayout>