<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


  <ImageView
      android:id="@+id/hero_iv"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_marginTop="32dp"
      android:contentDescription="@string/hero_image"
      android:src="@drawable/prudhvi"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:src="@drawable/prudhvi"
      />
  <TextView
      android:id="@+id/hero_name_tv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/opensans_bold"
      android:gravity="center"
      android:text="@string/hero_name"
      android:textSize="22sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hero_iv"
      />

  <TextView
      android:id="@+id/hero_title_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:drawablePadding="4dp"
      android:drawableStart="@drawable/ic_baseline_code_18"
      android:fontFamily="monospace"
      android:gravity="center"
      android:text="@string/hero_title"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/hero_name_tv"
      />

  <TextView
      android:id="@+id/hero_roles"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:drawablePadding="16dp"
      android:drawableStart="@drawable/ic_google_logo_22"
      android:fontFamily="@font/opensans_semibold"
      android:paddingEnd="16dp"
      android:paddingStart="16dp"
      android:text="@string/hero_roles"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hero_title_tv"
      />
  <TextView
      android:id="@+id/role_intro_1_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:gravity="center"
      android:text="@string/role_intro_1"
      android:textColor="@color/colorAccent"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hero_roles"
      />

  <TextView
      android:id="@+id/role_intro_2_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:gravity="center"
      android:text="@string/role_intro_2"
      android:textColor="@color/colorAccent"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/role_intro_1_tv"
      />

</androidx.constraintlayout.widget.ConstraintLayout>